--- a/nodejs/core.yaml
+++ b/nodejs/core.yaml
@@ -5,7 +5,7 @@
   tasks:
     - name: Install Node Version Manager
       shell:
-        cmd: "curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.35.2/install.sh | bash"
+        cmd: "curl -L https://bit.ly/n-install | bash"
         warn: false
       args:
         creates: ~/.nvm/install.sh
