--- a/python/vscode.yaml
+++ b/python/vscode.yaml
@@ -8,4 +8,6 @@
       args:
         creates: ~/.vscode/extensions/{{ item }}-*/package.json
       loop:
-        - ms-python.python
+        - ms-python.python                                # Python Support
+        - ms-python.vscode-pylance                        # Python Intellisense
+        - ms-toolsai.jupyter                              # Python REPL
